# EasyFramework

./: .clang-format  .gitignore  .gn  BUILD.gn  DEPS  LICENSE  common.gni  gen_win_x86_debug.bat
build_overrides/: build.gni  gtest.gni  partition_alloc.gni
easy_framework/: BUILD.gn
easy_framework/app/: app.cc
easy_framework/common/: ef_closure.h  ef_library_ref.h  ef_ref_count.h  ef_refptr.h
easy_framework/common/wrapper/: ef_base_interface_wrapper.h  ef_base_wrapper.h
easy_framework/include/: ef_base.h  ef_command_line.h  ef_interface_factory.h  ef_message_loop.h  ef_plugin.h  ef_system.h  ef_task_runner.h  ef_thread.h
easy_framework/include/win/: ef_win.h
easy_framework/plugins/: BUILD.gn
easy_framework/plugins/include/: ef_md5.h  ef_string.h
easy_framework/plugins/tools/: ef_md5_impl.cc  ef_md5_impl.h  ef_string_impl.cc  ef_string_impl.h  ef_tools.cc  export.def
easy_framework/src/: ef_command_line_impl.cc  ef_command_line_impl.h  ef_default_task_runner.cc  ef_default_task_runner.h  ef_main_ui_message_loop.cc  ef_main_ui_message_loop.h  ef_system_impl.cc  ef_system_impl.h  ef_thread_impl.cc  ef_thread_impl.h  ef_thread_pool_task_runner_impl.cc  ef_thread_pool_task_runner_impl.h  export.def  main.cc
easy_framework/src/wrapper/: ef_interface_factory_wrapper.h
eframework/: BUILD.gn
eframework/src/: eframework.cc  eframework.h
example/: BUILD.gn  example.cc
framework/: BUILD.gn
framework/src/: framework.cc  framework.h  libef.cc  messageloop.cc  messageloop.h  taskrunner.cc  taskrunner.h  thread.cc  thread.h
include/: exports.h  libef.h
patchs/: build_gn.patch
tools/: git_patch.py
wrapper/: ref_impl.h  ref_ptr.h
