import("//build/config/arm.gni")
import("//build/config/features.gni")
import("//build/config/mips.gni")
import("//build/config/ozone.gni")
import("//build/config/sanitizers/sanitizers.gni")
import("//build/config/sysroot.gni")
import("//build_overrides/build.gni")

if (is_mac) {
  import("//build/config/mac/rules.gni")
}

declare_args() {
  # windows default use unicode
  base_win_undef_unicode = false
}
