import("//common.gni")

if (is_mac) {
} else {
  config("easy_app_config") {
    ldflags = [ "/SUBSYSTEM:WINDOWS" ]

    if (is_clang) {
      cflags = [ "-Wno-undef" ]
    }
  }

  executable("easy_app") {
    testonly = true

    configs += [ ":easy_app_config" ]

    sources = [ "app/app.cc" ]

    deps = [
      ":libef",
      "//base",
    ]
  }

  shared_library("libef") {
    testonly = true

    sources = [
      "src/export.def",
      "src/main.cc",
    ]

    sources += [ "src/wrapper/ef_interface_factory_wrapper.h" ]

    sources += [
      "src/ef_command_line_impl.cc",
      "src/ef_command_line_impl.h",
      "src/ef_default_task_runner.cc",
      "src/ef_default_task_runner.h",
      "src/ef_main_ui_message_loop.cc",
      "src/ef_main_ui_message_loop.h",
      "src/ef_system_impl.cc",
      "src/ef_system_impl.h",
      "src/ef_thread_impl.cc",
      "src/ef_thread_impl.h",
    ]

    deps = [ "//base" ]
  }
}

group("easy_framework") {
  testonly = true
  deps = [ ":easy_app" ]
}
