import("//base.gni")

config("eframework_config") {
  defines = [ "FRAMEWORK_IMPLEMENTATION" ]
}

base_shared_library("libef") {
  sources = [
    "src/eframework.cc",
    "src/eframework.h",
  ]

  deps = [
    "//base",
    "//libef:include",
  ]

  configs += [ ":eframework_config" ]
}
