import("//base.gni")

config("libef_cfg") {
  cflags = []
  defines = [ "FRAMEWORK_IMPLEMENTATION" ]
  if (is_clang) {
    cflags += [ "-Wno-undef" ]
  }
}

base_shared_library("libef") {
  sources = [
    "src/framework.cc",
    "src/framework.h",
    "src/libef.cc",
    "src/messageloop.cc",
    "src/messageloop.h",
    "src/taskrunner.cc",
    "src/taskrunner.h",
    "src/thread.cc",
    "src/thread.h",
  ]

  deps = [
    "//base",
    "//libef:include",
  ]

  configs += [ ":libef_cfg" ]
}
