shared_library("libtools") {
  output_dir = "$root_out_dir/plugin"
  sources = [
    "tools/ef_md5_impl.cc",
    "tools/ef_md5_impl.h",
    "tools/ef_string_impl.cc",
    "tools/ef_string_impl.h",
    "tools/ef_tools.cc",
  ]

  sources += [
    "include/ef_md5.h",
    "include/ef_string.h",
  ]

  if (is_win) {
    sources += [
      "tools/export.def"
    ]
  }

  deps = [ "//base" ]
}
